# Columnar-Constructive-Networks

./: CMakeLists.txt  README.md  atari_experiment.cpp  count_configs.cpp  experiment.py  experiment_animal_learning.cpp  gradient_gt.py
experiment_configs/: animal_learning_ISI_study.json  animal_learning_ISI_study_tbt.json  animal_learning_camera_ready.json  animal_learning_camera_ready_tbtt.json  atari_abalation_studies_3m.json  atari_abalation_studies_3m_no_norm.json
include/environments/: proto_prediction_environments.h
include/environments/animal_learning/: tracecondioning.h
include/nn/: lstm.h  neuron.h  synapse.h  utils.h
include/nn/networks/: base_lstm.h  lstm_bptt.h  lstm_incremental_networks.h  network_factory.h  neural_network.h
src/environments/: cartpole.cpp  proto_prediction_environments.cpp  weather.cpp
src/environments/animal_learning/: traceconditioning.cpp  tracepatterning.cpp
src/nn/: lstm.cpp  neuron.cpp  synapse.cpp  utils.cpp
src/nn/networks/: lstm_bptt.cpp  lstm_incremental_networks.cpp  network_factory.cpp  neural_network.cpp
src/src/: CMakeLists.txt
src/src/common/: CMakeLists.txt  SoundNull.hxx  SoundSDL.cxx  SoundSDL.hxx
src/src/emucore/: CMakeLists.txt  Cart0840.hxx  Cart3E.hxx  Cart3F.hxx  CartAR.hxx  CartCV.hxx  CartE0.hxx  CartE7.hxx  CartF4.hxx  CartF4SC.hxx  CartF6.hxx  CartF6SC.hxx  CartF8.hxx  CartF8SC.hxx  CartUA.hxx  M6502Hi.hxx  OSystem.cxx  Sound.hxx  TIA.cxx
src/src/environment/: CMakeLists.txt
src/src/games/: CMakeLists.txt  RomSettings.cpp  RomSettings.hpp  Roms.cpp
src/src/games/supported/: Asteroids.cpp  CMakeLists.txt  DarkChambers.cpp  Hangman.cpp  SpaceWar.cpp  TicTacToe3d.cpp
